--- a/Happyling/Base.lproj/Main.storyboard
+++ b/Happyling/Base.lproj/Main.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -243,11 +243,11 @@
             </objects>
             <point key="canvasLocation" x="-1116" y="1101"/>
         </scene>
-        <!--Issue-->
+        <!--Fix a problem-->
         <scene sceneID="v70-38-bhv">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="TdZ-jC-ck8" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Issue" image="ic_issues" id="zTg-ZT-j37"/>
+                    <tabBarItem key="tabBarItem" title="Fix a problem" image="ic_sad" id="zTg-ZT-j37"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="pXs-yA-R9B">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
@@ -505,10 +505,10 @@
             </objects>
             <point key="canvasLocation" x="2893.5999999999999" y="837.93103448275872"/>
         </scene>
-        <!--About Me View Controller-->
+        <!--Account View Controller-->
         <scene sceneID="Qaz-CI-V8z">
             <objects>
-                <viewController automaticallyAdjustsScrollViewInsets="NO" id="QRe-Cz-woO" customClass="AboutMeViewController" customModule="Happyling" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="QRe-Cz-woO" customClass="AccountViewController" customModule="Happyling" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="YiP-4T-dYE"/>
                         <viewControllerLayoutGuide type="bottom" id="Nwm-Sv-NgO"/>
@@ -561,11 +561,11 @@
             </objects>
             <point key="canvasLocation" x="2014" y="2383"/>
         </scene>
-        <!--Me-->
+        <!--Account-->
         <scene sceneID="wo0-nM-V9Q">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="L8S-uZ-CRg" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Me" image="ic_more_onbright" id="MVn-sN-1xb"/>
+                    <tabBarItem key="tabBarItem" title="Account" image="ic_circled_user" id="MVn-sN-1xb"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="dL6-nW-ane">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
@@ -1194,10 +1194,10 @@
             </objects>
             <point key="canvasLocation" x="3092" y="2024"/>
         </scene>
-        <!--My Issues View Controller-->
+        <!--Problems View Controller-->
         <scene sceneID="uWD-wh-glL">
             <objects>
-                <viewController automaticallyAdjustsScrollViewInsets="NO" id="qYt-lA-P9E" customClass="MyIssuesViewController" customModule="Happyling" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="qYt-lA-P9E" customClass="ProblemsViewController" customModule="Happyling" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="pMf-T2-unG"/>
                         <viewControllerLayoutGuide type="bottom" id="cgV-Hb-e8q"/>
@@ -1206,39 +1206,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="oPC-3i-oX5">
-                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="IssueCellID" textLabel="IHT-VR-Oxc" detailTextLabel="x8p-l8-Cdq" style="IBUITableViewCellStyleSubtitle" id="YWM-f2-mXs">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="YWM-f2-mXs" id="fGO-Bc-aZB">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="IHT-VR-Oxc">
-                                                    <rect key="frame" x="15" y="5" width="33.5" height="20.5"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="x8p-l8-Cdq">
-                                                    <rect key="frame" x="15" y="25.5" width="44" height="14.5"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="100" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="oPC-3i-oX5">
+                                <rect key="frame" x="16" y="64" width="343" height="554"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="oPC-3i-oX5" firstAttribute="trailing" secondItem="RVy-3R-Jtb" secondAttribute="trailingMargin" id="cmg-Yt-wco"/>
+                            <constraint firstItem="oPC-3i-oX5" firstAttribute="top" secondItem="pMf-T2-unG" secondAttribute="bottom" id="nGG-QA-lfP"/>
+                            <constraint firstItem="oPC-3i-oX5" firstAttribute="leading" secondItem="RVy-3R-Jtb" secondAttribute="leadingMargin" id="sRu-IJ-xua"/>
+                            <constraint firstItem="oPC-3i-oX5" firstAttribute="bottom" secondItem="cgV-Hb-e8q" secondAttribute="top" id="wco-rl-Tkx"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="tableView" destination="oPC-3i-oX5" id="fPv-Gk-AOS"/>
@@ -1247,12 +1226,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EHX-4B-W2f" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3092" y="3180"/>
+            <point key="canvasLocation" x="3092" y="3179.4602698650679"/>
         </scene>
-        <!--Issue Description View Controller-->
+        <!--Problem Details View Controller-->
         <scene sceneID="mKb-97-xTp">
             <objects>
-                <viewController id="eBP-fC-15u" customClass="IssueDescriptionViewController" customModule="Happyling" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="eBP-fC-15u" customClass="ProblemDetailsViewController" customModule="Happyling" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="qFN-cW-veh"/>
                         <viewControllerLayoutGuide type="bottom" id="xc1-EY-qD8"/>
@@ -1261,27 +1240,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="xG3-ev-XFC">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="xG3-ev-XFC">
+                                <rect key="frame" x="16" y="0.0" width="343" height="618"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="CellID" textLabel="mxl-zy-5Wk" detailTextLabel="ZsN-JX-WCm" style="IBUITableViewCellStyleValue1" id="cbV-93-Hd4">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="CellID" textLabel="mxl-zy-5Wk" style="IBUITableViewCellStyleDefault" id="cbV-93-Hd4">
+                                        <rect key="frame" x="0.0" y="56" width="343" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="cbV-93-Hd4" id="fSw-W0-h2E">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="343" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="mxl-zy-5Wk">
-                                                    <rect key="frame" x="15" y="12" width="33.5" height="20.5"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="ZsN-JX-WCm">
-                                                    <rect key="frame" x="316" y="12" width="44" height="20.5"/>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="mxl-zy-5Wk">
+                                                    <rect key="frame" x="15" y="0.0" width="313" height="43.5"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
@@ -1294,6 +1265,12 @@
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="xG3-ev-XFC" firstAttribute="bottom" secondItem="xc1-EY-qD8" secondAttribute="top" id="6Bf-uY-r2x"/>
+                            <constraint firstItem="xG3-ev-XFC" firstAttribute="top" secondItem="hNQ-Kw-lWH" secondAttribute="top" id="94E-dW-sdv"/>
+                            <constraint firstItem="xG3-ev-XFC" firstAttribute="trailing" secondItem="hNQ-Kw-lWH" secondAttribute="trailingMargin" id="EIR-BP-q6h"/>
+                            <constraint firstItem="xG3-ev-XFC" firstAttribute="leading" secondItem="hNQ-Kw-lWH" secondAttribute="leadingMargin" id="ft4-PL-dwt"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="tableView" destination="xG3-ev-XFC" id="GQa-MO-mbI"/>
@@ -1307,7 +1284,7 @@
         <scene sceneID="1nr-Dw-Tmk">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="x75-EU-FzY" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Categories" image="ic_categories" id="yQQ-Hd-ZWa"/>
+                    <tabBarItem key="tabBarItem" title="Categories" image="ic_sorting_options" id="yQQ-Hd-ZWa"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="SzM-as-xek">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
@@ -1801,12 +1778,12 @@
         </scene>
     </scenes>
     <resources>
-        <image name="ic_categories" width="24" height="24"/>
-        <image name="ic_issues" width="25" height="25"/>
-        <image name="ic_more_onbright" width="24" height="24"/>
+        <image name="ic_circled_user" width="24" height="24"/>
+        <image name="ic_sad" width="24" height="24"/>
         <image name="ic_search" width="24" height="24"/>
+        <image name="ic_sorting_options" width="24" height="24"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="NrY-Hh-TYl"/>
+        <segue reference="ISv-eL-vee"/>
     </inferredMetricsTieBreakers>
 </document>
